app/app.less
/* ... */
.datetimepicker table tr td span.active:active, .datetimepicker table tr td span.active:hover:active, .datetimepicker table tr td span.active.disabled:active, .datetimepicker table tr td span.active.disabled:hover:active, .datetimepicker table tr td span.active.active, .datetimepicker table tr td span.active:hover.active, .datetimepicker table tr td span.active.disabled.active, .datetimepicker table tr td span.active.disabled:hover.active {
    background: rgb(63, 81, 181) !important;
}

.md-select-label {
    color: inherit !important;
}

.connection-lost-bg {
    background-color: rgba(244, 67, 54, 0.4) !important;
}

.connection-lost-bg-bright {
    background-color: rgba(244, 67, 54, 1.0) !important;
}

.json-key {
    color: brown;
}
.json-value {
    color: navy;
}
.json-string {
    color: olive;
}

pre {
    height: 100%;
    background-color: rgba(255,255,255, 0.8);
    border: none;
}

.main-footer-toolbar {
    font-size: 16px;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

.md-sidenav-right {
    position: fixed;
}

.md-sidenav-left {
    position: fixed;
}

.opacity-50 {
    opacity: 0.25;
}

.span-text-overflow-hidden-ellipsis {
    span {
        text-overflow: ellipsis;
        overflow: hidden;
    }
}

.icon-button {
    height: 26px;
    width: 26px;
    font-size: 14px;
    padding: 6px;
    opacity: 0.2;
    transition: opacity .25s ease-in-out;
    display: inline-block;
    text-align: center;
    &:hover {
        opacity: 0.7;
    }

}

.icon-button:hover[disabled] {
    opacity: 0.2;
}

*[disabled] {
    cursor: not-allowed !important;
}

.opaque {
    opacity: 1.0 !important;
}

.opaque-hover:hover * {
    opacity: 1.0 !important;
}

.thin-nav-button {
    margin: 0;
    max-height: 22px;
    min-height: 22px;
    font-size: 12px;
    line-height: 22px;
}

.text-overflow-ellipsis, .text-overflow-ellipsis * {
     overflow: hidden;
     text-overflow: ellipsis;
}

.fixed-width-18 {
    min-width: 18px;
    max-width: 18px;
}

.fixed-width-300 {
    min-width: 300px;
    max-width: 300px;
}

.sb-obs-readiness-div {
    font-size: 10px;
    min-width: 152px;
    max-width: 152px;
    text-overflow: clip;
    overflow: hidden;
}

.sb-time-and-type-div {
    font-size: 10px;
    min-width: 92px;
    max-width: 92px;
    text-overflow: clip;
    overflow: hidden;
}

.sensor-dialog-details-name {
    font-style: italic;
    min-width: 230px;
}

.subarray-number {
    font-size: 24px !important;
    line-height: 24px;
    font-weight: bold;
}

md-dialog {
    border-radius: 0 !important;
}

